# topiary

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  test0.nix  test0.scm  test1.nix  test2.ml  test3.ncl  test4.ml  test5.ml  test7.ml  test8.nix  test8.scm
.cargo/: config.toml
.github/actions/nix-build/: action.yml
.github/workflows/: ci.yml  docker.yml  website.yaml
docs/book/: README.md
docs/book/src/: SUMMARY.md
docs/book/src/cli/: configuration.md  dialogue.md
docs/book/src/cli/usage/: check-grammar.md  completion.md  config.md  coverage.md  format.md  index.md  prefetch.md  visualise.md
docs/book/src/getting-started/: on-tree-sitter.md
docs/book/src/guides/: adding-a-new-language.md  contributing.md  suggested-workflow.md
docs/book/src/reference/: formatting-pipeline.md  language-injections.md  language-support.md
docs/book/src/reference/capture-names/: indentation.md  vertical-spacing.md
docs/manpages/: README.md
examples/client-app/src/: main.rs
nix/: default.nix  languages.nix  topiary-config.nix
nix/checks/: default.nix
nix/lib/: config.nix  default.nix  eval-config.nix
nix/modules/: home-manager.nix  topiary.nix
nix/overlays/: wasm-bindgen-cli.nix
nix/utils/: default.nix  generate-ncl.nix  prefetchLanguages.nix
topiary-cli/: Cargo.toml  build.rs
topiary-cli/src/: check.rs  cli.rs  error.rs  fs.rs  io.rs  language.rs  main.rs
topiary-cli/src/error/: hooks.rs
topiary-cli/tests/: cli-tester.rs  sample-tester.rs
topiary-cli/tests/samples/expected/: markdown.md  menhir.mly  nickel.ncl  ocaml.ml  ocaml_interface.mli  ocamllex.mll  ocamllex_invalid_inner.mll  openscad.scad  rust.rs  wit.wit
topiary-cli/tests/samples/expected/rust/: rust.rs
topiary-cli/tests/samples/input/: menhir.mly  nickel.ncl  ocaml.ml  ocaml_interface.mli  ocamllex_invalid_inner.mll  rust.rs  wit.wit
topiary-cli/tests/samples/input/markdown/: markdown.md
topiary-config/: Cargo.toml  languages.ncl
topiary-config/src/: error.rs  language.rs  lib.rs  source.rs
topiary-core/: Cargo.toml
topiary-core/benches/: benchmark.rs  injections.rs
topiary-core/src/: atom_collection.rs  error.rs  graphviz.rs  language.rs  lib.rs  pretty.rs  tree_sitter.rs
topiary-core/src/error/: error_span.rs  mod.rs
topiary-lsp/: Cargo.toml  README.md
topiary-lsp/src/: lib.rs
topiary-queries/: Cargo.toml
topiary-queries/queries/: wit.scm
topiary-queries/queries/markdown/: formatting.scm
topiary-queries/queries/menhir/: formatting.scm  injections.scm
topiary-queries/queries/nickel/: formatting.scm
topiary-queries/queries/nix/: formatting.scm
topiary-queries/queries/ocaml/: formatting.scm
topiary-queries/queries/ocaml_interface/: formatting.scm
topiary-queries/queries/openscad/: formatting.scm
topiary-queries/queries/rust/: formatting.scm  injections.scm
topiary-queries/queries/wit/: formatting.scm
topiary-queries/src/: lib.rs
topiary-resolver/: Cargo.toml
topiary-resolver/src/: lib.rs
topiary-tree-sitter-facade/src/: error.rs  node.rs  point.rs  query.rs  range.rs
website/: index.html
(+2 files in other folders)
