[package]
name = "topiary-resolver"
description = "Language resolution for Topiary, bridging configuration and core."
categories = ["development-tools", "text-processing"]
keywords = ["code-formatter", "formatter", "text", "tree-sitter"]
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
rootcause.workspace = true
topiary-core.workspace = true
topiary-config.workspace = true
topiary-queries.workspace = true
tokio.workspace = true

[features]
default = ["bash", "json", "nickel", "ocaml", "ocaml_interface", "ocamllex", "toml", "tree_sitter_query"]

bash = ["topiary-config/bash", "topiary-queries/bash"]
css = ["topiary-config/css", "topiary-queries/css"]
json = ["topiary-config/json", "topiary-queries/json"]
nickel = ["topiary-config/nickel", "topiary-queries/nickel"]
ocaml = ["topiary-config/ocaml", "topiary-queries/ocaml"]
ocaml_interface = ["topiary-config/ocaml_interface", "topiary-queries/ocaml_interface"]
ocamllex = ["topiary-config/ocamllex", "topiary-queries/ocamllex"]
openscad = ["topiary-config/openscad", "topiary-queries/openscad"]
rust = ["topiary-config/rust", "topiary-queries/rust"]
sdml = ["topiary-config/sdml", "topiary-queries/sdml"]
toml = ["topiary-config/toml", "topiary-queries/toml"]
tree_sitter_query = ["topiary-config/tree_sitter_query", "topiary-queries/tree_sitter_query"]
markdown = ["topiary-config/markdown", "topiary-queries/markdown"]
wit = ["topiary-config/wit", "topiary-queries/wit"]
